syntax = "proto3";
package Stridelabs.stride.stakeibc;
option go_package = "github.com/Stride-Labs/stride/x/stakeibc/types";

message DelegateCallback {
  string hostZoneId = 1; 
  uint64 depositRecordId = 2; 
}
